---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-01-19
  Features:
    - This version was played from finish through end
    - Added descriptions to resources
  Bugfixes:
    - Removed startup settings which did not do anything.
    - Removed small lava patches around the map (or at least the ones that i carefully checked out :))
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 2025-01-18
  Bugfixes:
    - Heating tower unlocked after concrete
    - lithium processing is now unlockable
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 2025-01-15
  Bugfixes:
    - Updated holmium graphics with higher contrast.
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 2025-01-14
  Features:
    - Asteroid chunks now have stack size of 50
    - new technology for traveling to solar system edge
    - removed rail support foundations technology since fulgora does not exist any more
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 2025-01-10
  Bugfixes:
    - Vulcanic rocks also provide calcite. This is needed for big mining drill
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 2025-01-09
  Bugfixes:
    - Removed some research triggers that were needed to continue with fulgora items
    - Updated mod compatibility list
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 2025-01-09
  Features:
    - Agriculture technology, calcite processing and tungsten carbide technologies are unlocked earier
    - Heating tower is unlocked after nuclear power