@@ -1,2 +1,4 @@
 
 require("prototypes.remove-planets")
+
+require("map-generation.resource-final-fixes")
